--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tamagui/animations-moti": "^1.132.20",
     "@tamagui/babel-plugin": "^1.132.20",
     "@tamagui/config": "^1.132.20",
     "@tamagui/lucide-icons": "^1.132.20",
     "@tamagui/portal": "^1.132.20",
     "@tanstack/react-query": "^5.85.5",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
